--- a/public/stylesheets/cadastro-parceiro.css
+++ b/public/stylesheets/cadastro-parceiro.css
@@ -11,12 +11,23 @@ body {
     background-image: url(../images/tijolinhoBranco.jpg);
 }
 
+.section-title {
+    text-align: center;
+}
+
 .container {
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
 }
-
+#planos {
+    display: flex;
+}
+@media(max-width: 767px) {
+    #planos button {
+        margin-bottom: 1rem;
+    }
+}
 
 .info{
     text-align: center;
