--- a/views/dashboard-pedidos-prestador-status.ejs
+++ b/views/dashboard-pedidos-prestador-status.ejs
@@ -18,7 +18,7 @@
         <div class="display-pedidos">
         <ul>
           <lo>
-            <div class="container">
+            <div class="container pending">
             <h3>Pendentes</h3>
             </div>
             <div class="container-secundario">
@@ -29,7 +29,7 @@
             </div>
             </lo>
           <lo>
-            <div class="container">
+            <div class="container approved">
               <h3>Aprovados</h3>
               </div>
             <div class="container-secundario">
@@ -40,7 +40,7 @@
             </div>
             </lo>
             <lo>
-              <div class="container">
+              <div class="container rejected">
                 <h3>Recusados</h3>
                 </div>
               <div class="container-secundario">
