--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,10 +39,10 @@
           </li>
           <% } else { %>
             <li>
-              <a class="nav-link active" href="/">Solicitações</a>
+              <a class="nav-link active" href="/dashboard-pedidos-prestador">Solicitações</a>
             </li>
           <li>
-            <a class="nav-link active" href="/">Minha Conta</a>
+            <a class="nav-link active" href="//dashboard-pedidos-prestador-status">Minha Conta</a>
           </li>
           <% } %>
         </ul>
