--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -27,7 +27,7 @@
                         <input class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="sobrenome" name="Sobrenome" placeholder="Sobrenome"  required>
+                        <input class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
