--- a/views/cadastro-tomador-servico.ejs
+++ b/views/cadastro-tomador-servico.ejs
@@ -11,31 +11,30 @@
       </h3>
       <div class="formulario-cadastro">
         <div>
-          <form action="" w>
-            <label for="nome">Nome</label>
-            <input type="text" name="nome" id="nome" >
-            
-            <label for="sobrenome">Sobrenome</label>
-            <input type="text" name="nome" id="nome" >
-            
-            <label for="email">Email</label>
-            <input type="email" name="nome" id="email" >
-                        
-            <label for="numero">Celular/ WhatsApp para contato (com DDD)</label>
-            <input type="tel" name="tel" id="tel" >
-            
-            <label for="endereco">Endereço Completo</label>
-            <input type="text" name="nome" id="nome" >
-            
-            <label for="senha">Senha</label>
-            <input type="text" name="nome" id="nome" >
-            
-            <label for="senha">Confirme Senha</label>
-            <input type="text" name="nome" id="nome" >
-
-            <div class="button">
-              <button type="submit">Criar Conta</button>
+          <form action="">
+            <div class="form-group">
+              <input class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
             </div>
+            <div class="form-group">
+              <input class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, complemento apt 301, Belo Horizonte, MG, cep 30140072" name="endereco"  required> 
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
+            </div>
+
+            <button type="button" class="btn btn-enviar" onclick="window.alert('Dados Salvos com Sucesso, agora escolha seu plano');window.location = '/escolha-de-plano'">Enviar</button>
             </form>
           </div>
           
