--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -24,42 +24,42 @@
             <form class="cadform" action="/action.php" target="_self" method="post">
                 <div class="cadastro">
                     <div class="form-group">
-                        <input class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
+                        <input required class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
+                        <input required class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
+                        <input required class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
+                        <input required class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
+                        <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="endereco"  placeholder="Endereço" name="endereco" >
+                        <input required class="form-control" type="text" id="endereco"  placeholder="Endereço" name="endereco" >
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="CEP"  placeholder="CEP" name="cep" >
+                        <input required class="form-control" type="text" id="CEP"  placeholder="CEP" name="cep" >
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
+                        <input required class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="registro"  placeholder="CPF/CNPJ" name="registro" >
+                        <input required class="form-control" type="text" id="registro"  placeholder="CPF/CNPJ" name="registro" >
                     </div>    
                 </div>
                 
                 <div class="arquivos">
                     <div class="form-group">
                         <label for="foto">Anexe uma foto para o seu perfil:</label> 
-                        <input class="form-control-file" type="file" id="foto" name="foto" >
+                        <input required class="form-control-file" type="file" id="foto" name="foto" >
                     </div>
                     <div class="form-group">
                         <label for="ident">Anexe uma foto com seu documento para comprovar a sua identidade:</label>
-                        <input class="form-control-file" type="file" id="identidade" name="ident" >
+                        <input required class="form-control-file" type="file" id="identidade" name="ident" >
                     </div>
                 </div>        
             <button type="button" class="btn btn-enviar" onclick="window.alert('Dados Salvos com Sucesso, agora escolha seu plano');window.location = '/escolha-de-plano'">Enviar</button>
