--- a/views/cadastro-tomador-servico.ejs
+++ b/views/cadastro-tomador-servico.ejs
@@ -13,25 +13,25 @@
         <div>
           <form action="">
             <div class="form-group">
-              <input class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
+              <input required class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
+              <input required class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
+              <input required class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
+              <input required class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, complemento apt 301, Belo Horizonte, MG, cep 30140072" name="endereco"  required> 
+              <input required class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco"  required> 
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
+              <input required class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
+              <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
             </div>
 
             <button type="button" class="btn btn-enviar" onclick="window.alert('Dados Salvos com Sucesso, agora escolha seu plano');window.location = '/escolha-de-plano'">Enviar</button>
