--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,9 +41,12 @@
             <li>
               <a class="nav-link active" href="/dashboard-pedidos-prestador">Solicitações</a>
             </li>
-          <li>
-            <a class="nav-link active" href="//dashboard-pedidos-prestador-status">Minha Conta</a>
-          </li>
+            <li>
+              <a class="nav-link active" href="/dashboard-pedidos-prestador-status">Minha Conta</a>
+            </li>
+            <li>
+              <a class="nav-link active" href="/logout">Sair</a>
+            </li>
           <% } %>
         </ul>
       </div>
