--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -21,7 +21,7 @@
             </div>
         </section>
         <section id="formulario">
-            <form class="cadform" action="/action.php" target="_self" method="post">
+            <form class="cadform" target="_self" method="POST">
                 <div class="cadastro">
                     <div class="form-group">
                         <input required class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
