--- a/views/solicitar-servico-encanador.ejs
+++ b/views/solicitar-servico-encanador.ejs
@@ -57,10 +57,7 @@
                           </section>                 
                           <section class ="caixa-dialogo">
                             <label for="caixa-dialogo">Descrição da Solicitação</label>
-                            <textarea id="caixa-dialogo" name="caixa-dialogo" rows="10" cols="100%">Detalhe sua solicitação aqui</textarea> 
-                            <div>
-                              <button name="botao">Anexar Imagens</button>
-                            </div>
+                            <textarea id="caixa-dialogo" name="caixa-dialogo" rows="10" cols="100%" placeholder="Detalhe sua solicitação aqui" required></textarea> 
                             <div class="botaoServico">
                               <a href="/cadastro-tomador-servico">
                                 Prosseguir
