--- a/views/cadastro-tomador-servico.ejs
+++ b/views/cadastro-tomador-servico.ejs
@@ -11,7 +11,7 @@
       </h3>
       <div class="formulario-cadastro">
         <div>
-          <form action="">
+          <form method="POST" action="/cadastro-tomador-servico">
             <div class="form-group">
               <input required class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
             </div>
@@ -19,7 +19,10 @@
               <input required class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
             </div>
             <div class="form-group">
-              <input required class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
+              <input required class="form-control" type="email" id="email" placeholder="E-mail" name="email"  required>
+            </div>
+            <div class="form-group">
+              <input required class="form-control" type="text" id="cpf" placeholder="CPF" name="cpf"  required>
             </div>
             <div class="form-group">
               <input required class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
@@ -28,13 +31,13 @@
               <input required class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco"  required> 
             </div>
             <div class="form-group">
-              <input required class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
+              <input required class="form-control" type="password" id="senha" placeholder="Senha" name="senha"  required>
             </div>
             <div class="form-group">
-              <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
+              <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha"  required>
             </div>
 
-            <button type="button" class="btn btn-enviar" onclick="window.alert('Dados Salvos com Sucesso, agora escolha seu plano');window.location = '/escolha-de-plano'">Enviar</button>
+            <button type="submit" class="btn btn-enviar">Enviar</button>
             </form>
           </div>
           
