feat: add prestador register

--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -21,7 +21,7 @@
             </div>
         </section>
         <section id="formulario">
-            <form class="cadform" target="_self" method="POST">
+            <form class="cadform" action="/cadastro-prestador" method="POST" enctype="multipart/form-data">
                 <div class="cadastro">
                     <div class="form-group">
                         <input required class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  required>
@@ -30,16 +30,13 @@
                         <input required class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="email" id="email" placeholder="E-mail" nome="email"  required>
+                        <input required class="form-control" type="email" id="email" placeholder="E-mail" name="email"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="password" id="senha" placeholder="Senha" nome="senha"  required>
+                        <input required class="form-control" type="password" id="senha" placeholder="Senha" name="senha"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" nome="confsenha"  required>
-                    </div>
-                    <div class="form-group">
-                        <input required class="form-control" type="text" id="endereco"  placeholder="Endereço" name="endereco" >
+                        <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha"  required>
                     </div>
                     <div class="form-group">
                         <input required class="form-control" type="text" id="CEP"  placeholder="CEP" name="cep" >
@@ -48,7 +45,7 @@
                         <input required class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="text" id="registro"  placeholder="CPF/CNPJ" name="registro" >
+                        <input required class="form-control" type="text" id="registro"  placeholder="CPF/CNPJ" name="cpf_cnpj" >
                     </div>    
                 </div>
                 
@@ -62,7 +59,7 @@
                         <input required class="form-control-file" type="file" id="identidade" name="ident" >
                     </div>
                 </div>        
-            <button type="button" class="btn btn-enviar" onclick="window.alert('Dados Salvos com Sucesso, agora escolha seu plano');window.location = '/escolha-de-plano'">Enviar</button>
+            <button type="submit" class="btn btn-enviar">Enviar</button>
         </form>
 
         </section>
