feat: add middleware if logged and add user on header

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/style.css" />
-<% if(style || false) { %>
+<% if(style && typeof style !== 'undefined') { %>
 <link rel="stylesheet" href="/stylesheets/<%= style %>.css" />
 <% } %>
 <meta charset="UTF-8" />
