--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,14 +44,14 @@
               </li>
               <% if (usuario.hasOwnProperty('cpf_cnpj')) { %>
                 <li>
-                  <a class="nav-link" href="/prestador-minha-conta">Minha Conta</a>
+                  <a class="nav-link" href="/minha-conta-prestador">Minha Conta</a>
                 </li>
                 <li>
                   <a class="nav-link" href="/dashboard-pedidos-prestador">Solicitações</a>
                 </li>
               <% } else { %>
                 <li>
-                  <a class="nav-link" href="/tomador-minha-conta">Minha Conta</a>
+                  <a class="nav-link" href="/minha-conta-tomador">Minha Conta</a>
                 </li>
                 <li>
                   <a class="nav-link" href="/dashboard-tomador-pedido">Solicitações</a>
