--- a/views/cadastro-prestador.ejs
+++ b/views/cadastro-prestador.ejs
@@ -33,10 +33,10 @@
                         <input required class="form-control" type="email" id="email" placeholder="E-mail" name="email"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="password" id="senha" placeholder="Senha" name="senha"  required>
+                        <input required class="form-control" type="password" id="senha" placeholder="Senha" name="senha">
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha"  required>
+                        <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha">
                     </div>
                     <div class="form-group">
                         <input required class="form-control" type="text" id="CEP"  placeholder="CEP" name="cep" >
