--- a/views/minha-conta-prestador.ejs
+++ b/views/minha-conta-prestador.ejs
@@ -12,39 +12,32 @@
           </h2>
         </section>
         <section id="formulario">
-            <form class="cadform" action="/minha-conta-prestador" method="POST" enctype="multipart/form-data">
+            <form class="cadform" action="/minha-conta-prestador" method="POST">
                 <div class="cadastro">
                     <div class="form-group">
-                        <input required class="form-control" type="text" readonly id="nome" name="nome" placeholder="Nome"  required>
+                        <input required class="form-control" value="<%= usuario.nome %>" type="text" readonly id="nome" name="nome" placeholder="Nome"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="text" readonly id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
+                        <input required class="form-control" value="<%= usuario.sobrenome %>" type="text" readonly id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="email" id="email" placeholder="E-mail" name="email"  required>
+                        <input required class="form-control" value="<%= usuario.email %>" type="email" id="email" placeholder="E-mail" name="email"  required>
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="password" id="senha" placeholder="Senha" name="senha"  required>
+                        <input class="form-control" type="password" id="senha" placeholder="Senha" name="senha">
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha"  required>
+                        <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha">
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="text" id="CEP"  placeholder="CEP" name="cep" >
+                        <input required class="form-control" value="<%= usuario.cep %>" type="text" id="CEP"  placeholder="CEP" name="cep" >
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
+                        <input required class="form-control" value="<%= usuario.telefone %>" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"  required> 
                     </div>
                     <div class="form-group">
-                        <input required class="form-control" type="text" readonly id="registro"  placeholder="CPF/CNPJ" name="cpf_cnpj" >
+                        <input required class="form-control" value="<%= usuario.cpf_cnpj %>" type="text" readonly id="registro"  placeholder="CPF/CNPJ" name="cpf_cnpj" >
                     </div>    
-                </div>
-                
-                <div class="arquivos">
-                    <div class="form-group">
-                        <label for="foto">Anexe uma foto para o seu perfil:</label> 
-                        <input class="form-control-file" type="file" id="foto" name="foto" >
-                    </div>
                 </div>        
             <button type="submit" class="btn btn-enviar">Enviar</button>
         </form>
