feat(views/partials): add nova solicitacao on header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -51,6 +51,9 @@
                 </li>
               <% } else { %>
                 <li>
+                  <a class="nav-link" href="/solicitar-servico">Novo Serviço</a>
+                </li>
+                <li>
                   <a class="nav-link" href="/minha-conta-tomador">Minha Conta</a>
                 </li>
                 <li>
